fix: fix todos scrollbar

--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -3,7 +3,7 @@
 
 @font-face {
     font-family: "Arial-MT";
-    src: url("../assets/fonts/Arial-MT.woff"); /* Путь к файлу со шрифтом */
+    src: url("../assets/fonts/Arial-MT.woff");
 }
 
 * {
@@ -19,8 +19,10 @@ body {
     font-size: 16px;
     color: #fff;
     text-align: center;
-    background: url("../assets/img/bg.jpg") center/cover, rgba(0, 0, 0, 0.5);
+    background: purple;
+    background: center/cover, rgba(0, 0, 0, 0.5);
     background-blend-mode: multiply;
+    /* transition: background-image 0.7s ease-in-out; */
     transition: background-image 1s ease-in-out;
     overflow: hidden;
 }
@@ -624,13 +626,15 @@ footer {
     display: none !important;
     user-select: none !important;
     height: auto;
-    min-height: 250px;
+    min-height: 320px;
     width: 100%;
     max-width: 320px;
     padding: 21px;
-    padding-bottom: 0px;
+    padding-right: 10px;
+    padding-bottom: 10px;
     display: flex;
     flex-direction: column;
+    left: 70px;
 }
 .todos__menu.active {
     display: flex !important;
@@ -652,41 +656,43 @@ footer {
     margin-bottom: 10px;
     max-height: 370px;
     overflow: auto;
+    padding-right: 10px;
 }
 
 .todos__body::-webkit-scrollbar {
     width: 3px;
+    transform: translateX(105px);
 }
 .todos__body::-webkit-scrollbar-track {
-    background-color: red;
+    background-color: rgba(255, 255, 255, 0.3);
 }
 .todos__body::-webkit-scrollbar-thumb {
+    background-color: white;
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
 .todos__placeholder {
     display: flex;
     flex-direction: column;
-    row-gap: 10px;
+    row-gap: 20px;
     align-items: center;
 }
 
 .todos__text {
     font-weight: 400;
-    opacity: 0.65;
     word-wrap: break-word;
 }
 
 .todos__start-button {
     width: 115px;
-    height: 30px;
+    height: 36px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 50px;
     font-weight: 500;
-    background-color: #244c88;
-    color: #fff;
+    background-color: #fff;
+    color: #000;
 }
 
 .todos__input {
@@ -710,14 +716,14 @@ footer {
     font-weight: 400;
 
     padding-left: 30px;
-    background: url('../assets/svg/status-new.svg') left center no-repeat;
+    background: url("../assets/svg/status-new.svg") left center no-repeat;
 }
 
 .todos__list {
     width: 100%;
     display: flex;
     flex-direction: column;
-    row-gap: 5px;
+    row-gap: 12px;
 }
 
 .todo__item {
@@ -741,7 +747,7 @@ footer {
     background-position: center;
     background-repeat: no-repeat;
     background-image: url("../assets/svg/status-avaible.svg");
-    transition: all .1s ease;
+    transition: all 0.1s ease;
 }
 
 .todo__text {
@@ -752,7 +758,7 @@ footer {
 }
 
 .todo__item.compleated .todo__text {
-    opacity: .5;
+    opacity: 0.5;
 }
 
 .todo__button {
@@ -761,18 +767,18 @@ footer {
     background-position: center;
     background-repeat: no-repeat;
     background-image: url("../assets/svg/delete-gray.svg");
-    transition: all .1s ease;
+    transition: all 0.1s ease;
 }
 
 .todo__button:hover {
     cursor: pointer;
 }
 
-.todo__button:active, .todo__status:active {
+.todo__button:active,
+.todo__status:active {
     transform: scale(0.85);
-    transition: all .2s ease;
+    transition: all 0.2s ease;
 }
-
 
 .info {
     position: absolute;
@@ -783,21 +789,21 @@ footer {
     column-gap: 15px;
 }
 .info__author {
-    opacity: .65;
+    opacity: 0.65;
     font-weight: 600;
-    transition: all .2s ease;
+    transition: all 0.2s ease;
 }
 .info__author:hover {
     opacity: 1;
-    transition: all .3s ease;
+    transition: all 0.3s ease;
 }
 .info__logo {
     height: 37px;
-    opacity: .65;
-    transition: all .2s ease;
+    opacity: 0.65;
+    transition: all 0.2s ease;
 }
 
-.info__logo:hover{
+.info__logo:hover {
     opacity: 1;
-    transition: all .3s ease;
+    transition: all 0.3s ease;
 }
